--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "openai": "^4.65.0",
     "react": "^18",
     "react-bootstrap": "^2.10.5",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-tooltip": "^5.28.0",
+    "react-zoom-pan-pinch": "^3.6.1"
   },
   "devDependencies": {
     "eslint": "^8",
