--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "lucide-react": "^0.474.0",
     "next": "14.2.13",
     "openai": "^4.65.0",
     "react": "^18",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18",
+    "react-resizable": "^3.0.5",
     "react-tooltip": "^5.28.0",
     "react-zoom-pan-pinch": "^3.6.1"
   },
@@ -23,5 +25,6 @@
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
