--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.474.0",
     "next": "14.2.13",
     "openai": "^4.65.0",
