--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "react": "^18",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18",
+    "react-markdown": "^9.0.3",
     "react-resizable": "^3.0.5",
     "react-tooltip": "^5.28.0",
     "react-zoom-pan-pinch": "^3.6.1"
   },
   "devDependencies": {
+    "@types/react-resizable": "^3.0.8",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
